#-------------------------------------
# ChangeLog file for package Detector
#-------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-70
2023-09-05 Mikhail Dubrovin
 src/UtilsCalib.py - return back parameters int_lo, int_hi, rms_lo, rms_hi, in DarkProc othervise jungfrau would not work
 src/UtilsDarkProc.py - add in kwa parameters int_lo, int_hi, rms_lo, rms_hi defined from command line det_ndarr_raw_proc
 src/UtilsJungfrauCalib.py - remove from __future__ import print_function

Tag: V02-00-69
2023-09-02 Mikhail Dubrovin
- src/UtilsCalib.py - fix input parameter names to intlow, inthig, rmslow, rmshig

Tag: V02-00-68
2023-08-22 Mikhail Dubrovin
- update doc/ChangeLog

Tag: V02-00-67
2023-08-22 Mikhail Dubrovin
- app/det_ndarr_raw_proc - use oct(d_verbos)

Tag: V02-00-66
2023-05-19 Mikhail Dubrovin
modified:
 ../app/det_raw_pixel_status - update USAGE, change default parameters
 UtilsRawPixelStatus.py - compleatiing det_raw_pixel_status Feat.11, tuning for production release

2023-05-15 Mikhail Dubrovin
modified:
../app/datinfo - add ds.env().experiment()add ds.env().experiment()
../app/det_calib_ave_and_max - multiple updates, extend output file names with exp, det, run  etc.
../app/det_ndarr_raw_proc - replace RepoManager repodir parameter with optional
../app/det_raw_calib_image - add/use argument_parser
../app/det_raw_pixel_status,
../app/epix10ka_deploy_constants,
../app/epix10ka_offset_calibration,
../app/epix10ka_pedestals_calibration,
../app/geometry_deploy_constants,
../app/jungfrau_dark_proc,
../app/jungfrau_deploy_constants,
../app/jungfrau_gain_constants,
GlobalUtils.py - dirrepo as optional parameter
RepoManager.py,
UtilsCalib.py,
UtilsDeployConstants.py - use optional RepoManager(dirrepo=...
UtilsGraphics.py - change default parameterrs for arr_median_limits
UtilsJungfrauCalib.py - cosmetic